test/zinc_source/compile_errors/functions/08_too_many_positional.zn
// expected-error: got too many arguments

fn add(x, y = 2) {
    return x + y
}

fn main() {
    add(1, 2, 3)
}
